# the_player

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/assets/: assets.rs  icons.rs  mod.rs
src/service/: mod.rs  music.rs  music_core.rs  music_player.rs  music_service.rs
src/service/music_service/: controller.rs  core.rs  decoder.rs  mod.rs  models.rs  music.rs  output.rs  player.rs  service.rs  stream.rs  time.rs
src/ui/: app.rs
src/ui/modules/: button.rs
src/utils/: utils.rs
