[package]
name = "gpui_study"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
atomic_float = "1.1.0"
cpal = "0.16.0"
gpui = "0.2.2"
lofty = "0.22.4"
ringbuf = "0.4.8"
rubato = "0.16.2"
rust-embed = "8.9.0"
symphonia = {version = "0.5.5", features = ["mp3", "flac", "wav", "ogg", "isomp4", "aac"]}
